--- a/src/Gemfile
+++ b/src/Gemfile
@@ -5,8 +5,8 @@ gem 'wdm', '>= 0.1.0' if Gem.win_platform?
 
 group :jekyll_plugins do
   gem 'jekyll-sitemap'
-  gem 'jekyll-feed'
   gem 'jekyll-seo-tag'
   gem 'jekyll-remote-theme'
+  gem 'jekyll-timeago'
 end
 
