Change site name

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -1,4 +1,4 @@
-title: "Tessa Power"
+title: "TP"
 author: "Tessa Power"
 description: "Have you tried turning it off and on again?"
 permalink: /:title/
