--- a/src/Gemfile
+++ b/src/Gemfile
@@ -2,12 +2,12 @@ source "https://rubygems.org"
 
 gem "jekyll", :git => 'https://github.com/jekyll/jekyll.git'
 gem 'wdm', '>= 0.1.0' if Gem.win_platform?
-gem 'jekyll-favicon', '~> 0.2.8', group: :jekyll_plugins
 
 group :jekyll_plugins do
   gem 'jekyll-sitemap'
   gem 'jekyll-seo-tag'
   gem 'jekyll-remote-theme'
   gem 'jekyll-timeago'
+  gem 'jemoji'
 end
 
