--- a/src/_config.yml
+++ b/src/_config.yml
@@ -3,7 +3,7 @@ author: "Tessa Power"
 description: "Have you tried turning it off and on again?"
 permalink: /:title/
 lang: "en"
-excerpt_separator: "\n\n\n"
+excerpt_separator: "<!--more-->"
 date_format: "%-d %B %Y"
 google_analytics: G-V0165CBTYP
 
