--- a/src/_config.yml
+++ b/src/_config.yml
@@ -32,7 +32,7 @@ external:
   # see http://fontawesome.com/icons
   - {title: github, icon: github, url: "https://github.com/tessapower"}
   - {title: linkedin, icon: linkedin-in, url: "https://linkedin.com/in/tessa-power"}
-  - {title: twitter, icon: twitter, url: "https://twitter.com/dearesttessi"}
+  - {title: twitter, icon: twitter, url: "https://twitter.com/sass_pwr"}
 
 remote_theme: niklasbuschmann/contrast@v2.8
 
