--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-gem "jekyll", :git => 'https://github.com/jekyll/jekyll.git'
+gem "jekyll", '~> 4.2', :git => 'https://github.com/jekyll/jekyll.git'
 gem 'wdm', '>= 0.1.0' if Gem.win_platform?
 
 group :jekyll_plugins do
