--- a/src/_config.yml
+++ b/src/_config.yml
@@ -5,7 +5,7 @@ permalink:          /:title/
 lang:               "en"
 excerpt_separator:  "<!--more-->"
 date_format:        "%-d %B %Y"
-google_analytics:   G-V0165CBTYP
+google_analytics:   G-W0KL5024ED
 
 # Layout
 
