Remove references to tessapower.co

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: TP
 author: Tessa Power
-url: https://www.tessapower.co
+url: https://www.tessapower.xyz
 description: >
   Have you tried turning it off and on again?
 
