--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,3 +11,5 @@ group :jekyll_plugins do
   gem 'jekyll-remote-theme'
   gem 'jekyll-timeago'
 end
+
+gem "jekyll-glossary_tooltip", "~> 2.0", :group => :jekyll_plugins
