--- a/docs/_data/home.yml
+++ b/docs/_data/home.yml
@@ -14,6 +14,12 @@ project_entries:
     desc: An application of computer vision algorithms and techniques to stabilize shaky video footage, including Lowe's Scale-Invariant Feature Transform (SIFT) technique for feature detection and Fischler and Bolles' RAndom SAmple Consesus (RANSAC) algorithm to compute robust homography matrices.
     keywords: [Computer Vision, C++, OpenCV, SIFT, RANSAC]
 
+  - title: Trail Conditions Map
+    url: https://github.com/tessapower/trail-conditions-map
+    desc: Full-stack trail conditions map for Austin MTB trails with real-time weather integration, TrailForks API, and intelligent condition warnings.
+    highlight: WIP
+    keywords: [Fullstack, JavaScript, TypeScript, React.js, Web Dev]
+
   - title: 3D Terrain Simulation
     url: https://github.com/tessapower/3d-terrain
     desc: 3D terrain simulation with an editable, procedurally generated terrain
@@ -27,17 +33,17 @@ project_entries:
     highlight: WIP
     keywords: [Game Engine, C++, DirectX, Win32]
 
-  - title: Snek
-    url: https://github.com/tessapower/snek
-    desc: A simple remake of the classic game Snake, built in Java using my own
-      custom 2D game engine TEngine.
-    keywords: [Java, Game, TEngine]
-
   - title: TEngine
     url: https://github.com/tessapower/tengine
     desc: A 2D game engine built to support building games in Java for the
       course 159261 Games Programming at Massey University.
     keywords: [Java, Game Engine]
+
+  - title: Snek
+    url: https://github.com/tessapower/snek
+    desc: A simple remake of the classic game Snake, built in Java using my own
+      custom 2D game engine TEngine.
+    keywords: [Java, Game, TEngine]
 
   - title: Holy Whac-a-Moley
     url: https://github.com/tessapower/weeksauce-feb24
@@ -53,14 +59,6 @@ project_entries:
   # - title: Cookie
   #   url: https://github.com/abhinavs/cookie
   #   desc: An open source landing website with supporting pages and integrated blog
-
-  # - title: Moonwalk
-  #   url: https://github.com/abhinavs/moonwalk
-  #   desc: A fast and minimalist Jekyll blog theme with clean dark mode
-
-  # - title: Humangous
-  #   url: https://www.humangous.co
-  #   desc: The better people know you, the better they collaborate
 
 footer_entries:
   - title: GitHub
