--- a/docs/_data/home.yml
+++ b/docs/_data/home.yml
@@ -27,6 +27,11 @@ project_entries:
       Rendering at VUW.
     keywords: [Real-time Rendering, C++, OpenGL, GLSL]
 
+   - title: 3D Gaussian Splat Viewer
+    url: https://github.com/tessapower/3dgs-viewer
+    desc: A simple Godot tool for visualizing and interacting with 3D Gaussian Splat point cloud data. Supports `.PLY` (Stanford Triangle Format), `.SPLAT` (3D Gaussian Splat format) and `.XYZ` files (simple point format).
+    keywords: [Computer Graphics, 3D Gaussian Splat, Godot, GDScript]
+
   - title: DXEngine
     url: https://github.com/tessapower/dxengine
     desc: Hardware accelerated DX11 based rendering engine built on Win32.
