--- a/docs/_data/home.yml
+++ b/docs/_data/home.yml
@@ -29,7 +29,7 @@ project_entries:
 
   - title: 3D Gaussian Splat Viewer
     url: https://github.com/tessapower/3dgs-viewer
-    desc: A simple Godot tool for visualizing and interacting with 3D Gaussian Splat point cloud data. Supports `.PLY` (Stanford Triangle Format), `.SPLAT` (3D Gaussian Splat format) and `.XYZ` files (simple point format).
+    desc: A simple Godot tool for visualizing and interacting with 3D Gaussian Splat point cloud data. Supports .PLY (Stanford Triangle Format), .SPLAT (3D Gaussian Splat format) and .XYZ files (simple point format).
     keywords: [Computer Graphics, 3D Gaussian Splat, Godot, GDScript]
 
   - title: DXEngine
