--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -4,6 +4,11 @@ source "https://rubygems.org"
 gemspec
 
 gem 'wdm', '>= 0.1.0' if Gem.win_platform?
+gem 'csv'
+gem 'logger'
+gem 'base64'
+gem 'bigdecimal'
+gem 'fiddle'
 
 group :jekyll_plugins do
   gem 'jekyll-sitemap'
