--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ url: https://www.tessapower.xyz
 description: >
   Have you tried turning it off and on again?
 
-permalink: /:slug
+permalink: /blog/:slug
 
 favicon: "./assets/images/favicon/favicon.ico"
 
