Add gifs to projects (where available)

--- a/docs/_data/home.yml
+++ b/docs/_data/home.yml
@@ -13,6 +13,7 @@ project_entries:
     url: https://github.com/tessapower/video-stabilizer
     desc: An application of computer vision algorithms and techniques to stabilize shaky video footage, including Lowe's Scale-Invariant Feature Transform (SIFT) technique for feature detection and Fischler and Bolles' RAndom SAmple Consesus (RANSAC) algorithm to compute robust homography matrices.
     keywords: [Computer Vision, C++, OpenCV, SIFT, RANSAC]
+    gif: assets/images/projects/video-stabilizer.gif
 
   - title: Trail Conditions Map
     url: https://github.com/tessapower/trail-conditions-map
@@ -31,6 +32,7 @@ project_entries:
     url: https://github.com/tessapower/sfx
     desc: A hot-reloadable shader playground for experimenting with GLSL fragment shaders offline, built with React, TypeScript, and Three.js.
     keywords: [TypeScript, React, Three.js, WebGL, Shaders]
+    gif: assets/images/projects/water-shader.gif
 
   - title: 3D Gaussian Splat Viewer
     url: https://github.com/tessapower/3dgs-viewer
@@ -54,16 +56,19 @@ project_entries:
     desc: A simple remake of the classic game Snake, built in Java using my own
       custom 2D game engine TEngine.
     keywords: [Java, Game, TEngine]
+    gif: assets/images/projects/snek.gif
 
   - title: Holy Whac-a-Moley
     url: https://github.com/tessapower/weeksauce-feb24
     desc: A game jam entry created for Weeksauce February 2024, using the Godot game engine and GDScript.
     keywords: [GDScript, Game, Godot Engine, Game Jam]
+    gif: assets/images/projects/holy-whac-a-moley.gif
 
   - title: Conway's Game of Life
     url: https://github.com/tessapower/game-of-life
     desc: A JS implementation of Conway's Game of Life.
     keywords: [JavaScript, Cellular Automata]
+    gif: assets/images/projects/game-of-life.gif
 
 # old_project_entries:
   # - title: Cookie
