--- a/docs/_data/home.yml
+++ b/docs/_data/home.yml
@@ -21,12 +21,6 @@ project_entries:
     keywords: [Computer Vision, C++, OpenCV, SIFT, RANSAC]
     gif: assets/images/projects/video-stabilizer.gif
 
-  - title: Trail Conditions Map
-    url: https://github.com/tessapower/trail-conditions-map
-    desc: Full-stack trail conditions map for Austin MTB trails with real-time weather integration, TrailForks API, and intelligent condition warnings.
-    highlight: WIP
-    keywords: [Fullstack, JavaScript, TypeScript, React.js]
-
   - title: 3D Terrain Simulation
     url: https://github.com/tessapower/3d-terrain
     desc: 3D terrain simulation with an editable, procedurally generated terrain
@@ -56,6 +50,24 @@ project_entries:
     desc: A custom built 2D game engine created to support building games in Java for the "159261 Games Programming" course at Massey University.
     keywords: [Java, Game Engine]
 
+  - title: Trail Conditions Map
+    url: https://github.com/tessapower/trail-conditions-map
+    desc: Full-stack trail conditions map for Austin MTB trails with real-time weather integration, TrailForks API, and intelligent condition warnings.
+    highlight: WIP
+    keywords: [Fullstack, JavaScript, TypeScript, React.js]
+
+  - title: Hugh's Chromatic Adventure
+    url: https://sasspower.itch.io/hughs-chromatic-adventure
+    desc: A colorful 2D platformer where you help Hugh the penguin solve puzzling levels. Built using the Godot game engine and GDScript.
+    keywords: [GDScript, 2D Game, Platformer, Godot Engine, Game Jam]
+    gif: assets/images/projects/hughs-chromatic-adventure.png
+
+  - title: Holy Whac-a-Moley
+    url: https://sasspower.itch.io/holy-whac-a-moley
+    desc: A delightful take on the classic Whack-A-Mole game. Created as a game jam entry for Weeksauce February 2024, using the Godot game engine and GDScript.
+    keywords: [GDScript, 2D Game, Godot Engine, Game Jam]
+    gif: assets/images/projects/holy-whac-a-moley.gif
+
   - title: Snek
     url: https://github.com/tessapower/snek
     desc: A simple remake of the classic game Snake, built in Java using my own
@@ -63,16 +75,10 @@ project_entries:
     keywords: [Java, Game, TEngine]
     gif: assets/images/projects/snek.gif
 
-  - title: Holy Whac-a-Moley
-    url: https://github.com/tessapower/week-sauce-feb24
-    desc: A delightful take on the classic Whack-A-Mole game. Created as a game jam entry for Weeksauce February 2024, using the Godot game engine and GDScript.
-    keywords: [GDScript, 2D Game, Godot Engine, Game Jam]
-    gif: assets/images/projects/holy-whac-a-moley.gif
-
   - title: Conway's Game of Life
     url: https://github.com/tessapower/game-of-life
     desc: A JS implementation of Conway's Game of Life.
-    keywords: [JavaScript, Cellular Automata]
+    keywords: [JavaScript, Simulation, Cellular Automata]
     gif: assets/images/projects/game-of-life.gif
 
 # old_project_entries:
