Add itch.io link to footer

--- a/docs/_data/home.yml
+++ b/docs/_data/home.yml
@@ -114,6 +114,9 @@ footer_entries:
   - title: Twitter
     url: https://twitter.com/sass_pwr
 
+  - title: Itch.io
+    url: https://sasspower.itch.io
+
   - title: Résumé
     url: ./resume.pdf
 
